Fix tags wrapping on multiple lines

--- a/components/blog/blog_post.module.scss
+++ b/components/blog/blog_post.module.scss
@@ -196,9 +196,12 @@
     padding: 0;
     margin-left: 1em;
     display: flex;
+    flex-wrap: wrap;
 
     li {
       margin: 0;
+      margin-bottom: 0.5em;
+      white-space: nowrap;
     }
   }
 }
